--- a/udata-tabular-preview/locales/en.json
+++ b/udata-tabular-preview/locales/en.json
@@ -2,5 +2,6 @@
   "Preview of {name}": "Preview of {name}",
   "{count} columns": "{count} columns | {count} column | {count} columns",
   "{count} rows": "{count} rows | {count} row | {count} rows",
-  "Explore data": "Explore data"
+  "Explore data": "Explore data",
+  "The preview of this file failed to load.": "The preview of this file failed to load."
 }
