--- a/udata-tabular-preview/locales/sr.json
+++ b/udata-tabular-preview/locales/sr.json
@@ -2,5 +2,6 @@
   "Preview of {name}": "",
   "{count} columns": "",
   "{count} rows": "",
-  "Explore data": ""
+  "Explore data": "",
+  "The preview of this file failed to load.": ""
 }
