--- a/udata-tabular-preview/locales/en.json
+++ b/udata-tabular-preview/locales/en.json
@@ -3,5 +3,6 @@
   "{count} columns": "{count} columns | {count} column | {count} columns",
   "Showing the first {shown} of {count} rows": "No rows in file | Showing the only row | Showing the first {shown} of {count} rows",
   "Explore data": "Explore data",
-  "The preview of this file failed to load.": "The preview of this file failed to load."
+  "The preview of this file failed to load.": "The preview of this file failed to load.",
+  "The data structure of this file failed to load.": "The data structure of this file failed to load."
 }
