--- a/udata-tabular-preview/locales/fr.json
+++ b/udata-tabular-preview/locales/fr.json
@@ -3,5 +3,6 @@
   "{count} columns": "{count} colonnes | {count} colonne | {count} colonnes",
   "Showing the first {shown} of {count} rows": "Pas de ligne dans le fichier | Affichage de la seule ligne | Affichage des {shown} premières lignes sur {count}",
   "Explore data": "Explorer les données",
-  "The preview of this file failed to load.": "La prévisualisation de ce fichier n'a pas pu être chargée."
+  "The preview of this file failed to load.": "La prévisualisation de ce fichier n'a pas pu être chargée.",
+  "The data structure of this file failed to load.": ""
 }
