--- a/udata-tabular-preview/locales/es.json
+++ b/udata-tabular-preview/locales/es.json
@@ -3,5 +3,7 @@
   "{count} columns": "",
   "Showing the first {shown} of {count} rows": "",
   "Explore data": "",
-  "The preview of this file failed to load.": ""
+  "The preview of this file failed to load.": "",
+  "Sort ascending": "",
+  "Sort descending": ""
 }
