--- a/udata-tabular-preview/locales/sr.json
+++ b/udata-tabular-preview/locales/sr.json
@@ -1,7 +1,9 @@
 {
   "Preview of {name}": "",
   "{count} columns": "",
-  "{count} rows": "",
   "Explore data": "",
-  "The preview of this file failed to load.": ""
+  "The preview of this file failed to load.": "",
+  "Sort ascending": "",
+  "Sort descending": "",
+  "Showing the first {shown} of {count} rows": ""
 }
