--- a/udata-tabular-preview/locales/es.json
+++ b/udata-tabular-preview/locales/es.json
@@ -1,7 +1,7 @@
 {
   "Preview of {name}": "",
   "{count} columns": "",
-  "Showing the first {shown} of {count} rows": "",
   "Explore data": "",
-  "The preview of this file failed to load.": ""
+  "The preview of this file failed to load.": "",
+  "{count} rows": ""
 }
