Feat/add new data structure component (#19)
* feat: :sparkles: add new data structure component

* feat: :sparkles: add explore button

Co-authored-by: maudetes <maudet.estelle@gmail.com>

--- a/udata-tabular-preview/locales/es.json
+++ b/udata-tabular-preview/locales/es.json
@@ -5,5 +5,8 @@
   "The preview of this file failed to load.": "",
   "{count} rows": "",
   "Sort ascending": "",
-  "Sort descending": ""
+  "Sort descending": "",
+  "The data structure of this file failed to load.": "",
+  "This is an Excel file, analysis on this type of files are limited.": "",
+  "No data structure found for this file.": ""
 }
