--- a/udata-tabular-preview/locales/en.json
+++ b/udata-tabular-preview/locales/en.json
@@ -5,5 +5,8 @@
   "The preview of this file failed to load.": "The preview of this file failed to load.",
   "{count} rows": "{count} rows | {count} row | {count} rows",
   "Sort ascending": "Sort ascending",
-  "Sort descending": "Sort descending"
+  "Sort descending": "Sort descending",
+  "The data structure of this file failed to load.": "The data structure of this file failed to load.",
+  "This is an Excel file, analysis on this type of files are limited.": "This is an Excel file, analysis on this type of files are limited.",
+  "No data structure found for this file.": "No data structure found for this file."
 }
