--- a/udata-tabular-preview/locales/fr.json
+++ b/udata-tabular-preview/locales/fr.json
@@ -5,5 +5,8 @@
   "The preview of this file failed to load.": "La prévisualisation de ce fichier n'a pas pu être chargée.",
   "{count} rows": "{count} lignes | {count} ligne | {count} lignes",
   "Sort ascending": "Trier par ordre croissant",
-  "Sort descending": "Trier par ordre décroissant"
+  "Sort descending": "Trier par ordre décroissant",
+  "The data structure of this file failed to load.": "",
+  "This is an Excel file, analysis on this type of files are limited.": "",
+  "No data structure found for this file.": ""
 }
