--- a/udata-tabular-preview/locales/it.json
+++ b/udata-tabular-preview/locales/it.json
@@ -3,7 +3,10 @@
   "{count} columns": "",
   "Explore data": "",
   "The preview of this file failed to load.": "",
+  "{count} rows": "",
   "Sort ascending": "",
   "Sort descending": "",
-  "Showing the first {shown} of {count} rows": ""
+  "The data structure of this file failed to load.": "",
+  "This is an Excel file, analysis on this type of files are limited.": "",
+  "No data structure found for this file.": ""
 }
