--- a/udata_tabular_preview/translations/fr/LC_MESSAGES/udata_tabular_preview.po
+++ b/udata_tabular_preview/translations/fr/LC_MESSAGES/udata_tabular_preview.po
@@ -1,10 +1,10 @@
 # English translations for udata-tabular-preview.
 # Copyright (C) 2023 Etalab
-# This file is distributed under the same license as the udata-tabular-preview
+# This file is distributed under the same license as the
+# udata-tabular-preview
 # project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: udata-tabular-preview 3.0.3.dev0\n"
@@ -12,7 +12,7 @@ msgstr ""
 "POT-Creation-Date: 2023-03-07 09:00+0100\n"
 "PO-Revision-Date: 2023-03-07 09:00+0100\n"
 "Last-Translator: Data.gouv.fr Team <data.gouv@data.gouv.fr>\n"
-"Language: en\n"
+"Language: fr\n"
 "Language-Team: Data.gouv.fr Team <data.gouv@data.gouv.fr>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
