--- a/udata-tabular-preview/locales/it.json
+++ b/udata-tabular-preview/locales/it.json
@@ -7,5 +7,7 @@
   "Sort ascending": "",
   "Sort descending": "",
   "The data structure of this file failed to load.": "",
-  "No data structure found for this file.": ""
+  "No data structure found for this file.": "",
+  "Explore data in detail": "",
+  "Use our tool": ""
 }
