--- a/udata-tabular-preview/locales/fr.json
+++ b/udata-tabular-preview/locales/fr.json
@@ -9,5 +9,6 @@
   "The data structure of this file failed to load.": "La structure de données de ce fichier n'a pas pu être chargée.",
   "No data structure found for this file.": "Aucune structure de données trouvée pour ce fichier.",
   "Explore data in detail": "Explorer les données en détail",
-  "Use our tool": "Utiliser notre outil pour obtenir un aperçu des données, en savoir plus sur les différentes colonnes ou réaliser des filtres et des tris."
+  "Use our tool": "Utiliser notre outil pour obtenir un aperçu des données, en savoir plus sur les différentes colonnes ou réaliser des filtres et des tris.",
+  "Preview updated: {date}": "Dernière mise à jour de la prévisualisation : {date}"
 }
