--- a/udata-tabular-preview/locales/sr.json
+++ b/udata-tabular-preview/locales/sr.json
@@ -9,5 +9,6 @@
   "The data structure of this file failed to load.": "",
   "No data structure found for this file.": "",
   "Explore data in detail": "",
-  "Use our tool": ""
+  "Use our tool": "",
+  "Preview updated: {date}": ""
 }
