--- a/udata_tabular_preview/translations/udata_tabular_preview.pot
+++ b/udata_tabular_preview/translations/udata_tabular_preview.pot
@@ -1,24 +1,24 @@
 # English translations for udata-tabular-preview.
-# Copyright (C) 2023 Etalab
+# Copyright (C) 2024 Etalab
 # This file is distributed under the same license as the udata-tabular-preview
 # project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: udata-tabular-preview 3.0.3.dev0\n"
+"Project-Id-Version: udata-tabular-preview 3.2.1.dev0\n"
 "Report-Msgid-Bugs-To: data.gouv@data.gouv.fr\n"
-"POT-Creation-Date: 2023-03-07 09:00+0100\n"
-"PO-Revision-Date: 2023-03-07 09:00+0100\n"
+"POT-Creation-Date: 2024-05-03 16:35+0200\n"
+"PO-Revision-Date: 2024-05-03 16:35+0200\n"
 "Last-Translator: Data.gouv.fr Team <data.gouv@data.gouv.fr>\n"
 "Language: en\n"
 "Language-Team: Data.gouv.fr Team <data.gouv@data.gouv.fr>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.8.0\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: udata_tabular_preview/templates/explore-button.html:7
 #: udata_tabular_preview/templates/explore-button.html:16
